objects/Request_for_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is the RFA still active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnalysisCenter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Analysis Center</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Selected Value is Not an Analysis Center</errorMessage>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.AnalysisCenter__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Request for Analysis</relationshipLabel>
        <relationshipName>Request_for_Analysis</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <label>Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommentsForReturn__c</fullName>
        <label>Comments for the return</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Information to select products (additional criteria) example: only Modbus interface</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateCodeFinal__c</fullName>
        <description>Period of date code with format able to identify plant + manufacturing date</description>
        <label>Final Manufacturing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCodeInitial__c</fullName>
        <description>Period of date code with format able to identify plant + manufacturing date</description>
        <label>Initial Manufacturing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDateReturn__c</fullName>
        <label>End Date of Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPFName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>FPF Name, If the RFA is created using a specific FPF</inlineHelpText>
        <label>FPF</label>
        <referenceTo>OFMFPF__c</referenceTo>
        <relationshipLabel>Request for Analysis</relationshipLabel>
        <relationshipName>Request_for_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>IF(TECH_WarningMsg__c,IMAGE(&quot;/servlet/servlet.ImageServer?id=&quot;+
$Label.CLR617OFMDocumentId,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalManufacturingDateCode__c</fullName>
        <inlineHelpText>Required format on this field is YYYYWW where YYYY is the manufacturing year and WW is the manufacturing week</inlineHelpText>
        <label>Final Manufacturing Date Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialManufacturingDateCode__c</fullName>
        <inlineHelpText>Required format on this field is YYYYWW where YYYY is the manufacturing year and WW is the manufacturing week</inlineHelpText>
        <label>Initial Manufacturing Date Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonNotifyAboutRFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a person that should be notified when the RFA is created or validated</inlineHelpText>
        <label>Person to notify about RFA creation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_for_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersontoNotifyAboutRFACreation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person to notify about RFA creation 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_for_Analysis1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlantCode__c</fullName>
        <label>Plant Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredCarrierInfo__c</fullName>
        <label>Preferred Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Problem</label>
        <referenceTo>Problem__c</referenceTo>
        <relationshipLabel>Request for Analysis</relationshipLabel>
        <relationshipName>Request_for_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReturnId__c</fullName>
        <label>Return Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDHSynchronizationmessage__c</fullName>
        <label>SDH Synchronization message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumberEnd__c</fullName>
        <label>Final Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumberStart__c</fullName>
        <label>Initial Serial Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateofReturn__c</fullName>
        <inlineHelpText>Input the eligible dates of Return. bFO will retrieve the Technical Returns with a matching &apos;Receiving date at DC&apos;</inlineHelpText>
        <label>Start Date of Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_Email__c</fullName>
        <label>TECH Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_WarningMsg__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TECH_WarningMsg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechActive__c</fullName>
        <formula>Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechApproverUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_for_Analysis2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransporterAccountNumber__c</fullName>
        <label>Carrier Account Number</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Request for Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <columns>FPFName__c</columns>
        <columns>StartDateofReturn__c</columns>
        <columns>EndDateReturn__c</columns>
        <columns>Country__c</columns>
        <columns>AnalysisCenter__c</columns>
        <columns>PreferredCarrierInfo__c</columns>
        <columns>TechApproverUser__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Comments__c</columns>
        <columns>CommentsForReturn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AnalysisCenter__c</field>
            <operation>startsWith</operation>
            <value>gsc eajp - p1 - stl</value>
        </filters>
        <label>All Request For Analysis</label>
    </listViews>
    <listViews>
        <fullName>EcoBuildings_Inactive_RFAs</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>FPFName__c</columns>
        <columns>StartDateofReturn__c</columns>
        <columns>EndDateReturn__c</columns>
        <columns>AnalysisCenter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AnalysisCenter__c</field>
            <operation>startsWith</operation>
            <value>Partner EcoB</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>EcoBuildings - Inactive RFAs</label>
        <sharedTo>
            <group>EcoBuildings</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OFM_RFALIST</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <columns>FPFName__c</columns>
        <columns>StartDateofReturn__c</columns>
        <columns>EndDateReturn__c</columns>
        <columns>Country__c</columns>
        <columns>AnalysisCenter__c</columns>
        <columns>TechApproverUser__c</columns>
        <columns>PreferredCarrierInfo__c</columns>
        <columns>Comments__c</columns>
        <columns>CommentsForReturn__c</columns>
        <filterScope>Mine</filterScope>
        <label>01.Request For Analysis owned by me</label>
        <language>en_US</language>
        <sharedTo>
            <group>OFM_Support_Group</group>
            <group>OFM_Target_Audience_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01_Request_For_analysis_Full_Scope</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <columns>FPFName__c</columns>
        <columns>StartDateofReturn__c</columns>
        <columns>EndDateReturn__c</columns>
        <columns>AnalysisCenter__c</columns>
        <columns>PreferredCarrierInfo__c</columns>
        <columns>DateCodeInitial__c</columns>
        <columns>DateCodeFinal__c</columns>
        <columns>RelatedProblem__c</columns>
        <columns>Country__c</columns>
        <columns>TechApproverUser__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>01.Request For Analysis Full Scope</label>
        <language>en_US</language>
        <sharedTo>
            <group>OFM_Support_Group</group>
            <group>OFM_Target_Audience_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02_Request_For_Analysis_Generic_Active</fullName>
        <columns>NAME</columns>
        <columns>FPFName__c</columns>
        <columns>StartDateofReturn__c</columns>
        <columns>EndDateReturn__c</columns>
        <columns>Country__c</columns>
        <columns>AnalysisCenter__c</columns>
        <columns>PreferredCarrierInfo__c</columns>
        <columns>DateCodeInitial__c</columns>
        <columns>DateCodeFinal__c</columns>
        <columns>PlantCode__c</columns>
        <columns>TechApproverUser__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Comments__c</columns>
        <columns>CommentsForReturn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request_for_Analysis__c.Generic_Request_For_Analysis</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>02.Request For Analysis Generic &amp; Active</label>
        <language>en_US</language>
        <sharedTo>
            <group>OFM_Support_Group</group>
            <group>OFM_Target_Audience_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02_Request_For_Analysis_Generic_Inactive</fullName>
        <columns>NAME</columns>
        <columns>FPFName__c</columns>
        <columns>StartDateofReturn__c</columns>
        <columns>EndDateReturn__c</columns>
        <columns>Country__c</columns>
        <columns>AnalysisCenter__c</columns>
        <columns>PreferredCarrierInfo__c</columns>
        <columns>DateCodeInitial__c</columns>
        <columns>DateCodeFinal__c</columns>
        <columns>PlantCode__c</columns>
        <columns>TechApproverUser__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Comments__c</columns>
        <columns>CommentsForReturn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request_for_Analysis__c.Generic_Request_For_Analysis</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>02.Request For Analysis Generic Inactive</label>
        <language>en_US</language>
        <sharedTo>
            <group>OFM_Support_Group</group>
            <group>OFM_Target_Audience_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X03_Request_For_Analysis_OneShot</fullName>
        <columns>NAME</columns>
        <columns>ReturnId__c</columns>
        <columns>Country__c</columns>
        <columns>AnalysisCenter__c</columns>
        <columns>PreferredCarrierInfo__c</columns>
        <columns>TechApproverUser__c</columns>
        <columns>PersonNotifyAboutRFA__c</columns>
        <columns>PersontoNotifyAboutRFACreation__c</columns>
        <columns>Comments__c</columns>
        <columns>CommentsForReturn__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request_for_Analysis__c.One_shot_RFA</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>03.Request For Analysis OneShot</label>
        <language>en_US</language>
        <sharedTo>
            <group>OFM_Support_Group</group>
            <group>OFM_Target_Audience_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RFA-{0000000}</displayFormat>
        <label>Request for Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request for Analysis</pluralLabel>
    <recordTypes>
        <fullName>Generic_Request_For_Analysis</fullName>
        <active>true</active>
        <label>Generic Request For Analysis</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_shot_RFA</fullName>
        <active>true</active>
        <label>One Shot Request For Analysis</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RA_VR_APROFM01_RequiredNumber</fullName>
        <active>true</active>
        <description>BFOI2P-953-
Add a filter based on date-code</description>
        <errorConditionFormula>IF(ISBLANK(FinalManufacturingDateCode__c),false,if(AND(ISNUMBER(FinalManufacturingDateCode__c),LEN(FinalManufacturingDateCode__c) =6),if((value(LEFT(FinalManufacturingDateCode__c, 2)))=20,if((value(RIGHT(FinalManufacturingDateCode__c, 2))) &gt;53,true,false),if((value(LEFT(FinalManufacturingDateCode__c, 2)))=19,if((value(RIGHT(FinalManufacturingDateCode__c, 2))) &gt; 53,true,false),true)),true) &amp;&amp; NOT($User.BypassVR__c))</errorConditionFormula>
        <errorDisplayField>FinalManufacturingDateCode__c</errorDisplayField>
        <errorMessage>Please enter valid number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RA_VR_APROFM02_InitialManufacturingAsNum</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(InitialManufacturingDateCode__c),false,if(AND(ISNUMBER(InitialManufacturingDateCode__c),LEN(FinalManufacturingDateCode__c) =6 ),if((value(LEFT(InitialManufacturingDateCode__c, 2)))=20,if((value(RIGHT(InitialManufacturingDateCode__c, 2))) &gt;53,true,false),if((value(LEFT(InitialManufacturingDateCode__c, 2)))=19,if((value(RIGHT(InitialManufacturingDateCode__c, 2))) &gt; 53,true,false),true)),true) &amp;&amp; NOT($User.BypassVR__c))</errorConditionFormula>
        <errorDisplayField>InitialManufacturingDateCode__c</errorDisplayField>
        <errorMessage>Please enter valid number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFA_VR_DateValidation</fullName>
        <active>true</active>
        <description>Validation for start and end date of return</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c),OR(
 StartDateofReturn__c &gt;  EndDateReturn__c

))</errorConditionFormula>
        <errorMessage>End date must be later than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_RFAMinimalStartDateValidation</fullName>
        <active>true</active>
        <description>If RFA startdateof return is less than CLR617OFMRFAMinimumStartDate, should not be accepted to save the record</description>
        <errorConditionFormula>DATEVALUE($Label.CLR617OFMRFAMinimumStartDate) &gt;  StartDateofReturn__c &amp;&amp; NOT($User.BypassVR__c)</errorConditionFormula>
        <errorMessage>Start Date of Return should always be greater than the Go-Live Date</errorMessage>
    </validationRules>
</CustomObject>